--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
+		"url": "https://github.com/ingvarr6/Whoami.git"
 	}
 }
